Fixed issue with reservation form (counter not centered), and menu page

--- a/assets/ReviewPage.css
+++ b/assets/ReviewPage.css
@@ -4,9 +4,14 @@
 }
 
 
+body {
+    margin-top: 100px;
+}
+
 .heroSection {
     width: 100%;
-    padding: 10px
+    padding: 10px;
+
 }
 
 .heroInner {
